# Stock_Bro

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend-fastapi/: Dockerfile  README.md
backend-fastapi/app/: main.py
config/: development.txt
data/samples/: symbols.txt
docs/: README.md
frontend-streamlit/: Dockerfile  app.py  requirements.txt
notes/backend/: fastapi.md
notes/frontend/: kickoff.md
scripts/: setup_dev.py  test_basic.py
src/stock_bro/: __init__.py  main.py
src/stock_bro/ai/: __init__.py  predictor.py
src/stock_bro/analysis/: __init__.py  technical.py
src/stock_bro/api/: routes.py  server.py
src/stock_bro/config/: settings.py
src/stock_bro/data/: __init__.py  fetcher.py
src/stock_bro/utils/: logger.py
tests/: conftest.py
tests/unit/: test_data_fetcher.py  test_technical_analysis.py
