[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-bro"
version = "0.1.0"
description = "A smart AI that guides your investments with real-time insights, trend analysis, and personalized advice."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Stock Bro Team", email = "info@stockbro.ai"}
]
keywords = ["finance", "ai", "stocks", "investment", "analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "requests>=2.28.0",
    "python-dotenv>=0.19.0",
    "pydantic>=1.10.0",
    "pydantic-settings>=2.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "yfinance>=0.2.0",
    "alpha-vantage>=2.3.0",
    "scikit-learn>=1.1.0",
    "tensorflow>=2.10.0",
    "fastapi>=0.85.0",
    "uvicorn>=0.18.0",
    "sqlalchemy>=1.4.0",
    "pyyaml>=6.0",
    "loguru>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.20.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "pre-commit>=2.20.0",
]

[project.urls]
Homepage = "https://github.com/PericoLedesma/Stock_Bro"
Repository = "https://github.com/PericoLedesma/Stock_Bro"
Issues = "https://github.com/PericoLedesma/Stock_Bro/issues"

[project.scripts]
stock-bro = "stock_bro.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=src/stock_bro --cov-report=html --cov-report=term-missing"